# geonlp-software

./: .gitignore  .gitmodules  COPYING  LICENSE  Makefile.am  README  README.developers  README.geonlp_ma  README.md  am.conf  autotools.sh  configure  configure.ac
dict/: HOWTO_SET_DICTIONARY_FILES.txt  Makefile.am  dumpSqlite3Db.sh  generateSqlite3Db.sh  geonlp_ma_local.rc
dict/zip/: README.txt
doc/: Doxyfile.external  Doxyfile.internal
etc/: Makefile.am  geonlp.rc.in  geonlp_ma_makedic.rc.in
geonlp-dic-util/: README  geonlp-dic-util.php
geonlp-dic-util/lib/: GeonlpDictionary.php  LocalRepository.php  Utils.php
geonlp-dic-util/resource/: geonlp_local.rc  geonlp_ma_makedic.rc
geonlp_ma_makedic/: GeowordJudge.cpp  GeowordJudge.h  GeowordJudgeFailedException.h  InvalidArgumentException.h  MakedicCsvFileIO.cpp  MakedicCsvFileIO.h  MakedicException.h  MakedicGenerator.cpp  MakedicGenerator.h  MakedicGenerator.ini.dist  MakedicGeneratorApp.cpp  MakedicGeneratorApp.h  MakedicGeneratorAppArgument.cpp  MakedicGeneratorAppArgument.h  MakedicGeneratorConfiguration.cpp  MakedicGeneratorConfiguration.h  MakedicItem.h  Makefile.am  main.cpp
include/: Address.h  Classifier.h  Context.h  DBAccessor.h  Dictionary.h  Exception.h  GeonlpMA.h  GeonlpMAImplSq3.h  GeonlpService.h  GeonlpService.h.20130713  Geoword.h  JsonRpcClient.h  Makefile.am  MeCabAdapter.h  Node.h  PHBSDefs.h  Profile.h  SelectCondition.h  SpatialCondition.h  SpatialConstraint.h  TemporalCondition.h  Util.h  picojson.h  picojson.h.orig  picojsonExt.h
libgeonlp/: Address.cpp  CSVReader.cpp  Classifier.cpp  Context.cpp  DBAccessor.cpp  Dictionary.cpp  FileAccessor.cpp  GeonlpMA.cpp  GeonlpMAImplSq3.cpp  GeonlpService.cpp  Geoword.cpp  JsonRpcClient.cpp  Makefile.am  Makefile.in.bak  MeCabAdapter.cpp  Node.cpp  NodeExt.cpp  PHBSDefs.cpp  Profile.cpp  SelectCondition.cpp  SpatialCondition.cpp  SpatialConstraint.cpp  TemporalCondition.cpp  Util.cpp  picojsonExt.cpp
libgeonlp/unit_test/: Makefile  test_dbaccessor.cpp  test_dictionary.cpp  test_fileaccessor.cpp  test_geoword.cpp  test_ma.cpp  test_parse.cpp  test_picojson.cpp  test_rpcclient.cpp  test_service.cpp  test_util.cpp
php-extension/: Makefile.am  README  phpgeonlp.ini  phpgeonlp.xml  phpgeonlp.xml.mixed-sample
php-extension/tests/: MAgetGeowordEntries.php  MAgetGeowordEntry.php  MAparse.php  MAparseNode.php  addressGeocoding.php  getDictionaries.php  getDictionaryInfo.php  getGeoInfo.php  parse.php  parseStructured.php
python-extension/: geonlp.cpp  sample.py  setup.py
python-extension/pygeonlp/: README.md  pygeonlp.cpp  sample.py  setup.py  unittest.py
python-extension/pygeonlp/samples/: addressGeocoding.py  analyze.py  getDictionaryInfo.py  getGeoInfo.py  ma_parse.py  ma_parseNode.py  parse.py  parseStructured.py  proc.py  search.py  wakachi.py
python-extension/pygeonlp_stfilter/: setup.py
python-extension/pygeonlp_stfilter/pygeonlp_filter/: __init__.py  spatial.py  st_filter.py  temporal.py
python-extension/pygeonlp_stfilter/pygeonlp_stfilter/: spatial.py  st_filter.py  temporal.py
python-extension/pygeonlp_stfilter/tests/: spatial_test.py  temporal_test.py
ruby-extension/: README.euc_jp  extconf.rb  rbgeonlp_ma.cpp
ruby-extension/tests/: getGeowordEntries.rb  getGeowordEntriesByXXXCodeFromThemes.php  getGeowordEntriesByXXXCodeFromThemes.rb  getGeowordEntry.rb  getGeowordIdList.rb  parse.rb  parseNode.rb  setCustomThemes.rb
src/: Makefile.am  geonlp_add.cpp  geonlp_api.cpp  geonlp_api_server.cpp  geonlp_cgi.cpp  geonlp_ma.cpp  geonlp_rebuild.cpp
test/: geonlp_api_server_client.php  geonlp_api_test.json  test.sqlite3  test_api.sh  test_geodicdao.cpp  test_geoprofile.cpp
test/sample_text/: sample.txt  sample2.txt  sample3.txt  sample4.txt
