include $(top_srcdir)/am.conf
noinst_HEADERS = DBAccessor.h FileAccessor.h MeCabAdapter.h Suffix.h \
                 Exception.h Node.h Dictionary.h \
                 GeonlpMA.h NodeExt.h Util.h \
                 GeonlpMAImplSq3.h PHBSDefs.h Wordlist.h \
                 Geoword.h Profile.h darts.h \
                 GeowordFormatter.h SqliteErrException.h \
                 SqliteNotInitializedException.h \
                 DartsException.h FormatException.h \
                 picojson.h picojsonExt.h CSVReader.h \
                 GeonlpService.h Context.h Classifier.h
