include $(top_srcdir)/am.conf
bin_PROGRAMS       = geonlp_ma geonlp_add geonlp_rebuild geonlp_api geonlp_cgi
geonlp_ma_SOURCES  = geonlp_ma.cpp
geonlp_ma_LDADD    = $(LIBGEONLP) $(LIBSQLITE3_LIB)
geonlp_add_SOURCES = geonlp_add.cpp
geonlp_add_LDADD   = $(LIBGEONLP) $(LIBSQLITE3_LIB)
geonlp_rebuild_SOURCES = geonlp_rebuild.cpp
geonlp_rebuild_LDADD = $(LIBGEONLP) $(LIBSQLITE3_LIB)
geonlp_api_SOURCES = geonlp_api.cpp
geonlp_api_LDADD   = $(LIBGEONLP) $(LIBSQLITE3_LIB)
geonlp_cgi_SOURCES = geonlp_cgi.cpp
geonlp_cgi_LDADD   = $(LIBGEONLP) $(LIBSQLITE3_LIB)
